--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,7 @@ a:visited{
 .navbar{
     width: 100%;
     position: absolute;
+    z-index: 9999;
     margin-top: 150px;
     display: inline;
     text-align: center;
@@ -43,4 +44,43 @@ a:visited{
     margin: 5px;
     font-size: 1.3em;
     font-family: 'Lora', serif;
+}
+
+
+.slidesAndMenuDrop{
+    width: 100%;
+    height: 350px;
+    position: absolute;
+    z-index: 9999;
+    margin-top: 200px;
+    padding-left: 50px;
+    padding-right: 50px;
+    background-color: #f1f1f1;
+}
+.footProbParent{
+    display: none;
+}
+.footProbOptions{
+    display: none;
+}
+.achillesOptions{
+    display: none;
+}
+.careOptions{
+    display: none;
+}
+.fitnessOptions{
+    display: none;
+}
+.footCareOptions{
+    display: none;
+}
+.shoesOptions{
+    display: none;
+}
+.linkOptions{
+    display: none;
+}
+.ankleOptions{
+    display: none;
 }
